static/css/signup.css
#password_input {
    display: grid;
    grid-template-columns: 85% 15%;
}

#password_input input {
    position: relative;
}

.tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
    height: 100%;
    width: 0%;
}

/* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;
}

    /* Show the tooltip text when you mouse over the tooltip container */
    .tooltip:hover .tooltiptext {
        visibility: visible;
    }

.tooltip_icon{
    padding: 0;
    margin: 0;
    height: 50px;
    width: 50px;
    
}

.text-danger{
    color: red;
}

